# cspin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/cspin/: exception.hpp  named_mutex.hpp  scoped_lock.hpp  shared_memory.hpp  tcp_client.hpp  tcp_server.hpp  timer_event.hpp  udp_receiver.hpp  udp_sender.hpp  utils.hpp
include/cspin/socket/: receiver.hpp  sender.hpp  socket_communication.hpp  tcp_client.hpp  tcp_server.hpp  udp_receiver.hpp  udp_sender.hpp
src/: shared_memory.cpp  timer_event.cpp  udp_sender.cpp
test/: CMakeLists.txt  test_cspin.cpp  test_shared_memory.cpp  test_tcp_client.cpp  test_tcp_server.cpp  test_timer_event.cpp  test_udp_receiver.cpp  test_udp_sender.cpp
